<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/big_padding"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:text="@string/username_text_view" />

    <EditText
        android:id="@+id/username_edit_text"
        style="@style/loginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textViewColor"
        android:layout_marginHorizontal="@dimen/big_padding"/>

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:text="@string/password_text_view" />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/loginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textViewColor"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/login_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/login_button"
            style="@style/buttonStandardStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_button"
            style="@style/buttonStandardStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/register" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/google_sign_in_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:text="@string/google_sign_in_info" />

    <Button
        android:id="@+id/youtube_button"
        style="@style/buttonYTStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/YouTube" />

</LinearLayout>
