<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".View.GameMenuActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/big_padding"
        app:srcCompat="@drawable/main_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/game_menu_clicker"
            style="@style/buttonStandardStyle"
            android:layout_width="200dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_clicker" />

        <Button
            android:id="@+id/game_menu_sensor_clicker"
            style="@style/buttonStandardStyle"
            android:layout_width="200dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_sensor_clicker" />

        <Button
            android:id="@+id/game_menu_scoreboard"
            style="@style/buttonStandardStyle"
            android:layout_width="200dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_scoreboard" />

        <Button
            android:id="@+id/game_menu_logout"
            style="@style/buttonStandardStyle"
            android:layout_width="200dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_logout" />
    </LinearLayout>

</LinearLayout>