<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".View.RegisterActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/big_padding"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/reg_usr_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:text="@string/username_text_view" />

    <EditText
        android:id="@+id/reg_usr_edit_text"
        style="@style/loginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textViewColor"
        android:layout_marginHorizontal="@dimen/big_padding"/>

    <TextView
        android:id="@+id/reg_pass_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:text="@string/password_text_view" />

    <EditText
        android:id="@+id/reg_pass_edit_text"
        style="@style/loginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textViewColor"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/reg_rep_pass_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/big_padding"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:text="@string/rep_password_text_view" />

    <EditText
        android:id="@+id/reg_rep_pass_edit_text"
        style="@style/loginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textViewColor"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create_account"
        style="@style/buttonStandardStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/create_acc"  />
</LinearLayout>